# rosneuro_acquisition_plugins

./: README.md
rosneuro_acquisition_dummydev/: CMakeLists.txt  package.xml  plugin_dummydev.xml
rosneuro_acquisition_dummydev/include/rosneuro_acquisition_dummydev/: DummyDevice.hpp
rosneuro_acquisition_dummydev/src/: DummyDevice.cpp
rosneuro_acquisition_eegdev/: CMakeLists.txt  README.md  package.xml
rosneuro_acquisition_eegdev/include/rosneuro_acquisition_eegdev/: EGDDevice.hpp
rosneuro_acquisition_eegdev/src/: EGDDevice.cpp  test_egddevice.cpp
rosneuro_acquisition_lsl/: CMakeLists.txt  README.md  package.xml
rosneuro_acquisition_lsl/include/rosneuro_acquisition_lsl/: LSLDevice.hpp
rosneuro_acquisition_lsl/src/: LSLDevice.cpp
